Only show mute icon on tab when sound is playing

This CL adds a check to WasRecentlyAudible before adding a mute icon to
a tab to avoid always showing a mute icon when a tab is muted. This also
adds the fade animation to the (mute icon)->(no icon) transition. Since
adding the fade animation breaks a TabTest unit test (which worked under
the assumption that each of its transitions was instantaneous), this CL
also manually stops fade animations in that test.

Bug: 785406
Change-Id: I0d7fd732b605f634f9df59b736dd7f19c382a09e
Reviewed-on: https://chromium-review.googlesource.com/889178
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532652}
Former-commit-id: 6d8c81c88ed66d6311932f00414ac0e48d5b701d